--- a/packages/ranui/components/player/index.less
+++ b/packages/ranui/components/player/index.less
@@ -16,7 +16,7 @@
 }
 
 .video-speed-dropdown {
-  z-index: 1001;
+  z-index: 101;
   --ran-dropdown-padding: 0px;
   --ran-dropdown-background: rgba(91, 91, 91, 0.6);
   --ran-dropdown-option-item-hover-background-color: #595959;
@@ -29,7 +29,7 @@
 }
 
 .video-clarity-dropdown {
-  z-index: 1001;
+  z-index: 101;
   --ran-dropdown-padding: 0px;
   --ran-dropdown-background: rgba(91, 91, 91, 0.6);
   --ran-dropdown-option-item-hover-background-color: #595959;
@@ -150,7 +150,7 @@
       font-size: var(--ran-player-controller-tip-font-size, 10px);
       list-style: var(--ran-player-controller-tip-list-style, none);
       font-family: var(--ran-player-controller-tip-font-family, @font-family);
-      z-index: var(--ran-player-controller-tip-z-index, 1000);
+      z-index: var(--ran-player-controller-tip-z-index, 100);
       font-variant: var(--ran-player-controller-tip-font-variant, initial);
       background: var(--ran-player-controller-tip-background, rgba(0, 0, 0, 0.5));
       border-radius: var(--ran-player-controller-tip-border-radius, 8px);
